--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_world">Hello world</string>
     <string name="feat_login_welcome">Welcome to The Social Network!</string>
     <string name="feat_login_subtitle">Please Sign-in to continue</string>
+    <string name="feat_login_username">Username</string>
 </resources>
