--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="feat_login_welcome">Welcome to The Social Network!</string>
     <string name="feat_login_subtitle">Please Sign-in to continue</string>
     <string name="feat_login_username">Username</string>
+    <string name="feat_login_new_to_social_network">New to The Social Network?</string>
+    <string name="feat_login_register">Register</string>
+    <string name="feat_login_google">Login with Google</string>
+    <string name="feat_login_or">or</string>
+    <string name="feat_login_login">Login</string>
 </resources>
